--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 Roll-A-Ball/Library/PackageCache/com.unity.burst@1.6.6/.Runtime/hostmac/lld filter=lfs diff=lfs merge=lfs -text
+Roll-A-Ball/Library/PackageCache/* filter=lfs diff=lfs merge=lfs -text
